--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -3,7 +3,7 @@
 one:
   name: Mason
   email: mason@example.com
-  password_digest:  MyString
+  password: "masonisateacher"
 
 two:
   name: MyString
