Attempt to fix my controller tests, failed miserably.

--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -3,7 +3,7 @@
 one:
   name: Mason
   email: mason@example.com
-  password: "masonisateacher"
+  password: <%= BCrypt::Password.create("catsdrool") %>
 
 two:
   name: MyString
