--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
-  password_digest: MyString
+  name: Ruti
+  email: ruti@mail.com
+  password_digest: <%= BCrypt::Password.create("rutiisastudent") %>
   teacher_id: 1
 
 two:
-  name: MyString
-  email: MyString
-  password_digest: MyString
-  teacher_id: 1
+  name: Ilan
+  email: ilan@mail.com
+  password_digest: <%= BCrypt::Password.create("ilanisastudent") %>
+  teacher_id: 2
